--- a/package.json
+++ b/package.json
@@ -29,24 +29,29 @@
   },
   "homepage": "https://github.com/benjaminudoh10/Itawe-backend#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "celebrate": "^13.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
     "typeorm": "^0.2.26",
-    "jsonwebtoken": "^8.5.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.31",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
-    "@types/node": "^14.6.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.6.3",
     "@types/pg": "^7.14.5",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4",
     "typescript": "^4.0.3"
   }
